--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap");
 
 * {
     margin: 0;
     padding: 0;
-    font-family: 'Poppins', sans-serif;
+    font-family: "Poppins", sans-serif;
     box-sizing: border-box;
 }
 
@@ -49,7 +49,7 @@ header a:hover {
 }
 
 .main__wrapper {
-    margin: 143px 0px;
+    margin: 149.5px 0px;
 }
 
 hr {
@@ -121,7 +121,7 @@ th a:hover {
 .login__wrapper {
     height: 100%;
     padding: 20px;
-    border: 2px solid #e0e0e0 ;
+    border: 2px solid #e0e0e0;
 }
 
 .login__wrapper > span {
@@ -154,6 +154,15 @@ form > input {
     margin-left: 69%;
 }
 
+.table__wrapper > a {
+    font-weight: 600;
+    font-size: 15px;
+    display: inline-block;
+    margin-top: 10px;
+    margin-left: 20px;
+    color: #2c6842;
+}
+
 .text__red {
     color: #cf1797;
 }
@@ -178,9 +187,12 @@ form > p {
 
 .input {
     width: 100%;
+    padding: 0 5px;
 }
 
-.list_agenda, .tanggal_agenda, .agenda {
+.list_agenda,
+.tanggal_agenda,
+.agenda {
     margin: 10px 0;
 }
 
@@ -217,4 +229,36 @@ form > p {
     color: #fff;
     text-align: right;
     padding: 5px 0;
+}
+
+@media only screen and (max-width: 755px) {
+    .container {
+        width: 80%;
+    }
+
+    .main__wrapper {
+        margin: 50px 0;
+    }
+
+    .main__content {
+        /* flex-direction: row; */
+        flex-direction: column-reverse;
+    }
+}
+
+@media only screen and (max-width: 1150px) {
+    .container {
+        width: 60%;
+    }
+    .main__wrapper {
+        margin: 50px 0;
+    }
+
+    .main__content {
+        /* flex-direction: row; */
+        flex-direction: column-reverse;
+    }
+    .hide {
+        display: none;
+    }
 }
